# gobs/api/pricer.pb.go
@@ -33,6 +33,7 @@ type PriceRequest struct {
 	Spot                 float64  `protobuf:"fixed64,5,opt,name=spot,proto3" json:"spot,omitempty"`
 	Vol                  float64  `protobuf:"fixed64,6,opt,name=vol,proto3" json:"vol,omitempty"`
 	Rate                 float64  `protobuf:"fixed64,7,opt,name=rate,proto3" json:"rate,omitempty"`
+	ClientId             string   `protobuf:"bytes,8,opt,name=client_id,json=clientId,proto3" json:"client_id,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -112,10 +113,18 @@ func (m *PriceRequest) GetRate() float64 {
 	return 0
 }
 
+func (m *PriceRequest) GetClientId() string {
+	if m != nil {
+		return m.ClientId
+	}
+	return ""
+}
+
 type PriceResponse struct {
 	Value                float64  `protobuf:"fixed64,1,opt,name=value,proto3" json:"value,omitempty"`
 	ValueType            string   `protobuf:"bytes,2,opt,name=value_type,json=valueType,proto3" json:"value_type,omitempty"`
 	Error                string   `protobuf:"bytes,3,opt,name=error,proto3" json:"error,omitempty"`
+	ClientId             string   `protobuf:"bytes,4,opt,name=client_id,json=clientId,proto3" json:"client_id,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -167,6 +176,13 @@ func (m *PriceResponse) GetError() string {
 	return ""
 }
 
+func (m *PriceResponse) GetClientId() string {
+	if m != nil {
+		return m.ClientId
+	}
+	return ""
+}
+
 func init() {
 	proto.RegisterType((*PriceRequest)(nil), "gobs.PriceRequest")
 	proto.RegisterType((*PriceResponse)(nil), "gobs.PriceResponse")
@@ -175,27 +191,29 @@ func init() {
 func init() { proto.RegisterFile("pricer.proto", fileDescriptor_fec020e99f204f1f) }
 
 var fileDescriptor_fec020e99f204f1f = []byte{
-	// 316 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x54, 0x91, 0xcf, 0x4a, 0x33, 0x31,
-	0x14, 0xc5, 0x49, 0xff, 0x4c, 0xbf, 0xb9, 0xed, 0x87, 0xf6, 0x2a, 0x12, 0x8b, 0x42, 0x99, 0x55,
-	0x71, 0xd1, 0x8a, 0xee, 0x74, 0xa7, 0x0b, 0xb7, 0x32, 0xba, 0x90, 0x6e, 0x4a, 0x5a, 0xc3, 0x10,
-	0x0c, 0x93, 0x6b, 0x92, 0x29, 0x76, 0xeb, 0x2b, 0xf8, 0x2c, 0x3e, 0x89, 0xaf, 0xe0, 0x83, 0x48,
-	0x92, 0x0a, 0x75, 0x77, 0xce, 0x2f, 0xe7, 0x86, 0xc3, 0xbd, 0x30, 0x20, 0xab, 0x56, 0xd2, 0x4e,
-	0xc9, 0x1a, 0x6f, 0xb0, 0x53, 0x99, 0xa5, 0x1b, 0x9d, 0x54, 0xc6, 0x54, 0x5a, 0xce, 0x04, 0xa9,
-	0x99, 0xa8, 0x6b, 0xe3, 0x85, 0x57, 0xa6, 0x76, 0x29, 0x53, 0x7c, 0x32, 0x18, 0xdc, 0x87, 0xa1,
-	0x52, 0xbe, 0x36, 0xd2, 0x79, 0x1c, 0x43, 0x3f, 0x7c, 0xa2, 0xea, 0xea, 0x59, 0x78, 0xc9, 0xd9,
-	0x98, 0x4d, 0x58, 0xb9, 0x8b, 0xf0, 0x08, 0x32, 0xe7, 0xad, 0x7a, 0x91, 0xbc, 0x15, 0x1f, 0xb7,
-	0x2e, 0x70, 0xf9, 0x46, 0xca, 0x6e, 0x78, 0x3b, 0xf1, 0xe4, 0xf0, 0x18, 0xfe, 0x51, 0xe3, 0x17,
-	0x2b, 0xa1, 0x35, 0xef, 0x8c, 0xd9, 0x24, 0x2f, 0x7b, 0xd4, 0xf8, 0x5b, 0xa1, 0x35, 0x22, 0x74,
-	0x1c, 0x19, 0xcf, 0xbb, 0x71, 0x20, 0x6a, 0xdc, 0x87, 0xf6, 0xda, 0x68, 0x9e, 0x45, 0x14, 0x64,
-	0x48, 0xd9, 0xd0, 0xa5, 0x97, 0x52, 0x41, 0x17, 0x73, 0xf8, 0xbf, 0xad, 0xed, 0xc8, 0xd4, 0x4e,
-	0xe2, 0x21, 0x74, 0xd7, 0x42, 0x37, 0xbf, 0x8d, 0x93, 0xc1, 0x53, 0x80, 0x28, 0x16, 0x7e, 0x43,
-	0xa9, 0x6f, 0x5e, 0xe6, 0x91, 0x3c, 0x6e, 0x28, 0x0e, 0x49, 0x6b, 0x8d, 0x8d, 0x8d, 0xf3, 0x32,
-	0x99, 0x8b, 0xa7, 0xed, 0xdf, 0xf6, 0x41, 0xda, 0xb5, 0x5a, 0x49, 0xbc, 0x83, 0x6e, 0x04, 0x88,
-	0xd3, 0xb0, 0xd2, 0xe9, 0xee, 0xc2, 0x46, 0x07, 0x7f, 0x58, 0x6a, 0x53, 0x0c, 0xdf, 0xbf, 0xbe,
-	0x3f, 0x5a, 0xfd, 0x22, 0x9b, 0xc5, 0x8b, 0x5c, 0xb1, 0xb3, 0x09, 0x3b, 0x67, 0x37, 0xc3, 0xf9,
-	0x5e, 0x08, 0x87, 0x5b, 0x5c, 0x0b, 0x52, 0x0b, 0x5a, 0x2e, 0xb3, 0x78, 0x87, 0xcb, 0x9f, 0x00,
-	0x00, 0x00, 0xff, 0xff, 0xd1, 0x46, 0x9d, 0xb3, 0xbb, 0x01, 0x00, 0x00,
+	// 337 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x54, 0x91, 0xb1, 0x4e, 0xc3, 0x30,
+	0x10, 0x86, 0xe5, 0x36, 0x4d, 0x9b, 0x6b, 0x11, 0xf4, 0x40, 0x28, 0x14, 0x90, 0xaa, 0x4c, 0x15,
+	0x43, 0x8b, 0x60, 0x83, 0x0d, 0x06, 0xc4, 0x86, 0x02, 0x03, 0x62, 0x89, 0xdc, 0xd4, 0x8a, 0x2c,
+	0xac, 0xd8, 0xd8, 0x4e, 0xa1, 0x2b, 0xaf, 0xc0, 0x9b, 0xc1, 0x2b, 0xf0, 0x20, 0xc8, 0x76, 0x91,
+	0xda, 0xed, 0xee, 0xcb, 0x7f, 0xbe, 0xfb, 0xf3, 0xc3, 0x40, 0x69, 0x5e, 0x32, 0x3d, 0x55, 0x5a,
+	0x5a, 0x89, 0x51, 0x25, 0xe7, 0x66, 0x74, 0x52, 0x49, 0x59, 0x09, 0x36, 0xa3, 0x8a, 0xcf, 0x68,
+	0x5d, 0x4b, 0x4b, 0x2d, 0x97, 0xb5, 0x09, 0x9a, 0xec, 0x9b, 0xc0, 0xe0, 0xc1, 0x0d, 0xe5, 0xec,
+	0xad, 0x61, 0xc6, 0xe2, 0x18, 0xfa, 0xee, 0x11, 0x5e, 0x57, 0x0b, 0x6a, 0x59, 0x4a, 0xc6, 0x64,
+	0x42, 0xf2, 0x4d, 0x84, 0x87, 0x10, 0x1b, 0xab, 0xf9, 0x2b, 0x4b, 0x5b, 0xfe, 0xe3, 0xba, 0x73,
+	0x9c, 0x7d, 0x28, 0xae, 0x57, 0x69, 0x3b, 0xf0, 0xd0, 0xe1, 0x11, 0xf4, 0x54, 0x63, 0x8b, 0x92,
+	0x0a, 0x91, 0x46, 0x63, 0x32, 0x49, 0xf2, 0xae, 0x6a, 0xec, 0x2d, 0x15, 0x02, 0x11, 0x22, 0xa3,
+	0xa4, 0x4d, 0x3b, 0x7e, 0xc0, 0xd7, 0xb8, 0x07, 0xed, 0xa5, 0x14, 0x69, 0xec, 0x91, 0x2b, 0x9d,
+	0x4a, 0xbb, 0x5b, 0xba, 0x41, 0xe5, 0x6a, 0x3c, 0x86, 0xa4, 0x14, 0x9c, 0xd5, 0xb6, 0xe0, 0x8b,
+	0xb4, 0xe7, 0x5f, 0xed, 0x05, 0x70, 0xbf, 0xc8, 0xde, 0x61, 0x67, 0xed, 0xc9, 0x28, 0x59, 0x1b,
+	0x86, 0x07, 0xd0, 0x59, 0x52, 0xd1, 0xfc, 0xdb, 0x09, 0x0d, 0x9e, 0x02, 0xf8, 0xa2, 0xb0, 0x2b,
+	0x15, 0xcc, 0x24, 0x79, 0xe2, 0xc9, 0xd3, 0x4a, 0xf9, 0x21, 0xa6, 0xb5, 0xd4, 0xde, 0x4e, 0x92,
+	0x87, 0x66, 0x7b, 0x71, 0xb4, 0xbd, 0xf8, 0xe2, 0x79, 0xbd, 0x58, 0x3f, 0x32, 0xbd, 0xe4, 0x25,
+	0xc3, 0x3b, 0xe8, 0x78, 0x80, 0x38, 0x75, 0x61, 0x4c, 0x37, 0x7f, 0xf5, 0x68, 0x7f, 0x8b, 0x85,
+	0x53, 0xb3, 0xe1, 0xe7, 0xcf, 0xef, 0x57, 0xab, 0x9f, 0xc5, 0x33, 0x9f, 0xe5, 0x15, 0x39, 0x9b,
+	0x90, 0x73, 0x72, 0x33, 0x7c, 0xd9, 0x75, 0x62, 0x97, 0xe2, 0x35, 0x55, 0xbc, 0x50, 0xf3, 0x79,
+	0xec, 0x13, 0xbc, 0xfc, 0x0b, 0x00, 0x00, 0xff, 0xff, 0x26, 0xd2, 0x51, 0x48, 0xf5, 0x01, 0x00,
+	0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
